--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -77,7 +77,7 @@ $theme-colors: (
 $cassiopeia-toolbar-line-height:         1.8rem;
 
 // Fonts
-$font-family-base:                   'Fira Sans', Arial, sans-serif;
+$font-family-base:                   "Fira Sans", Arial, sans-serif;
 $cassiopeia-inverted-text-color:     $cassiopeia-template-color;
 $font-size-root:                     14px;
 $h1-font-size:                       1.857rem;
@@ -140,10 +140,10 @@ $custom-select-bg:                   $gray-200;
 // Custom form
 $custom-select-indicator-padding:    3rem;
 $custom-select-bg-size:              116rem;
-$custom-select-indicator:            url(../images/select-bg.svg);
-$custom-select-indicator-rtl:        url(../images/select-bg-rtl.svg);
-$custom-select-indicator-active:     url(../../../images/select-bg.svg);
-$custom-select-indicator-active-rtl: url(../../../images/select-bg-rtl.svg);
+$custom-select-indicator:            url("../images/select-bg.svg");
+$custom-select-indicator-rtl:        url("../images/select-bg-rtl.svg");
+$custom-select-indicator-active:     url("../../../images/select-bg.svg");
+$custom-select-indicator-active-rtl: url("../../../images/select-bg-rtl.svg");
 $custom-select-background:           $custom-select-indicator no-repeat right center / $custom-select-bg-size; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
 $custom-select-background-rtl:       $custom-select-indicator-rtl no-repeat left center / $custom-select-bg-size; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
 $custom-select-bg-size-sm:           75rem;
